feat: rename Community to Together and implement locale-based filtering for shared logs